<resources>
    <string name="app_name">Weather+</string>

    <string name="cities_empty_message">Add cities using the (+) button below</string>

    <string name="search_city_hint">Search City</string>

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;</string>

    <string name="msg_added">Added</string>
    <string name="msg_deleted">Deleted</string>

    <string name="tab_current">Current</string>
    <string name="tab_hours">Hourly</string>
    <string name="tab_days">Weekly</string>
    <!-- Menu -->
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>
    <!-- Settings -->
    <string name="pref_description_units">Temperature units</string>
    <string name="Units">Units</string>
    <string-array name="pref_list_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_list_units_values">
        <item>celsius</item>
        <item>fahrenheit</item>
    </string-array>

    <string name="map">Map</string>
    <string name="no_connection">No Internet Connection</string>

    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="current">Current: %s</string>
    <string name="feel_like">Feel like</string>
    <string name="cloud_cover">Cloud cover</string>
    <string name="precipitation">Precipitation</string>
    <string name="last_update">Last update: %s</string>

    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>

    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>

    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>

    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>

    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>

    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>

    <!-- 1: temperature; 2: unit -->
    <string name="dash_clock_status">%1$s°%2$s</string>
    <!-- 1: temperature; 2: unit; 3: weather description -->
    <string name="dash_clock_expanded_title">%1$s°%2$s - %3$s</string>
    <!-- 1: city; 2: country; 3: wind; 4: speed units; 5: pressure; 6: pressure units; 7: humidity -->
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>


</resources>
