<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/todayIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="start"
                android:scaleType="fitXY"
                android:text=""/>

            <TextView
                android:id="@+id/todaySummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="No data"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/todayTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="end"
                android:text="0 °C"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/weatherDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:divider="@android:color/transparent"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/feel_like"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_thermometer"/>

            <TextView
                android:id="@+id/todayFeelLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/wind"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_strong_wind"/>

            <TextView
                android:id="@+id/todayWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Wind: 0 m/s"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/pressure"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_barometer"/>

            <TextView
                android:id="@+id/todayPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Pressure: 0 hpa"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_humidity"/>

            <TextView
                android:id="@+id/todayHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Humidity: 0 %"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/cloud_cover"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_cloudy"/>

            <TextView
                android:id="@+id/todayCloudCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="CloudCover: 0 %"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/precipitation"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_weight="2"
                android:gravity="start"
                app:iiv_color="@android:color/white"
                app:iiv_icon="wic_umbrella"/>


            <TextView
                android:id="@+id/todayPrecipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Precipitation: 0 %"
                android:textColor="@android:color/white"
                android:paddingTop="15dp"
                android:textSize="16sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/lastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>